--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+            .text{
+                color:black;
+            }
+        .links :hover{
+            COLOR:red;
+        }
+    </style>
+</head>
+<body>
+    <h1>This is the home page to access all the projects</h1>
+    <div class="links">
+        <a class="text" href="calculator.html">Simple calculator using javascript</a><br>
+        <a class="text" href="fibb.html">Fibbonacci series using javascript</a><br>
+        <a class="text" href="hospital.html">Hospital management page using javascript arrays concept</a>  <br>
+        <a  class="text"  href="railway.html">Railways application using javascript arrays concept</a><br>
+        <a class="text" href="tic_tac_toe.html">Tic tac toe game implementation using javacsript </a><br>
+    </div>
+   
+</body>
+</html>
