--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <h1>This is the home page to access all the projects</h1>
     <div class="links">
-        <a class="text" href="calculator.html">Simple calculator using javascript</a><br>
+        <a class="text" href="Calculator.html">Simple calculator using javascript</a><br>
         <a class="text" href="fibb.html">Fibbonacci series using javascript</a><br>
         <a class="text" href="hospital.html">Hospital management page using javascript arrays concept</a>  <br>
         <a  class="text"  href="railway.html">Railways application using javascript arrays concept</a><br>
