--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a  class="text"  href="railway.html">Railways application using javascript arrays concept</a><br>
         <a class="text" href="tic_tac_toe.html">Tic tac toe game implementation using javacsript </a><br>
          <a class="text" href="mutiply.html">Multiplication table implementation using javacsript </a><br>
+          <a class="text" href="inventory.html">Inventory Analysis using javascript arrays  </a><br>
     </div>
    
 </body>
