--- a/index.html
+++ b/index.html
@@ -54,13 +54,8 @@
     <main>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="Calculator.html">1. Calculator</a></li>
-            <li><a href="fibb.html">2. Fibonacci Series</a></li>
-            <li><a href="mutiply.html">3. Multiplication Table</a></li>
-            <li><a href="railway.html">4 a. Railway Ticket Reservation</a></li>
-            <li><a href="inventory.html">4 b. Inventory Details</a></li>
-            <li><a href="hospital.html">4 c. Hospital Management Details</a></li>
-            <li><a href="tic_tac_toe.html">7. Tic-Tac-Toe</a></li>
+            <li><a href="Calculator.html">Assignment-1</a></li>
+            <li><a href="fibb.html">Assignment-2</a></li>
         </ul>
     </main>
 </body>
