--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <main>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="Calculator.html">Assignment-1</a></li>
-            <li><a href="fibb.html">Assignment-2</a></li>
+            <li><a href="assignment1.html">Assignment-1</a></li>
+            <li><a href="assignment2.html">Assignment-2</a></li>
         </ul>
     </main>
 </body>
