--- a/assignment2.html
+++ b/assignment2.html
@@ -54,13 +54,12 @@
     <main>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="Calculator.html">1. Calculator</a></li>
-            <li><a href="fibb.html">2. Fibonacci Series</a></li>
-            <li><a href="mutiply.html">3. Multiplication Table</a></li>
-            <li><a href="railway.html">4 a. Railway Ticket Reservation</a></li>
-            <li><a href="inventory.html">4 b. Inventory Details</a></li>
-            <li><a href="hospital.html">4 c. Hospital Management Details</a></li>
-            <li><a href="tic_tac_toe.html">7. Tic-Tac-Toe</a></li>
+            <li><a href="matrix.html">1. online application to find the transpose of the given matrix.</a></li>
+            <li><a href="student.html">2. display the student information using JSON.</a></li>
+            <li><a href="employee.html">3. display the employee details using JQuery.</a></li>
+            <li><a href="lib.html">4. program to display the library details using plugins.</a></li>
+            <li><a href="num.html">5. Find Sum of Natural Numbers Using Recursion.</a></li>
+            <li><a href="ball-game.html">6. JavaScript program to develop Catch the Ball Game.</a></li>
         </ul>
     </main>
 </body>
